# g2b

./: .coderabbit.yaml  .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
app/: admin_sync_router.py  api_schemas.py  cleanup_job_logs.py  config.py  db.py  main.py  seed_bids.py  sync_bid_change_history.py  sync_bid_crawl.py  sync_bid_detail_enrichment.py  sync_bid_public_info.py  sync_contract_process.py  sync_phase2_batch.py
app/clients/: __init__.py  g2b_bid_public_info_client.py  g2b_contract_process_client.py  g2b_industry_info_client.py
app/models/: __init__.py  attachment.py  bid.py  bid_detail.py  bid_license_limit.py  bid_participation_region.py  common.py  (+6 more)
docs/: PRD.md  README.md  operations-runbook.md
templates/: base.html
tests/: bid_version_fixtures.py  conftest.py  test_admin_sync_api.py  test_bid_mapper.py  test_bid_query_service.py  test_cleanup_job_logs.py  test_db_init.py  test_empty_states.py  test_g2b_bid_change_history_service.py  test_g2b_bid_crawl_service.py  test_g2b_bid_detail_enrichment_service.py  test_g2b_bid_public_info_client.py  test_g2b_bid_sync_service.py  test_g2b_contract_process_service.py  test_g2b_reference_enrichment_service.py  test_g2b_sync_plan.py  test_model_helpers.py  test_pages.py  test_pages_sqlmodel.py  test_public_bids_api.py  test_retry.py  test_secondary_page_mapper.py  test_sqlmodel_bid_repository.py  test_sqlmodel_operation_repository.py  test_sync_bid_crawl_cli.py  test_sync_bid_detail_enrichment_cli.py  test_sync_contract_process_cli.py  test_sync_logging.py  test_sync_phase2_batch_cli.py
(+108 files in other folders)
